--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -6,8 +6,8 @@ import "../styles/global.css";
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="author" content="Mintaka Studio" />
-<meta name="keywords" content="mintaka" />
+<meta name="author" content="STUDIO A-MORE" />
+<meta name="keywords" content="STUDIO A-MORE" />
 
 <!-- Favicon guidelines generated with https://favicon.io/ -->
 <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png" />
@@ -24,8 +24,7 @@ import "../styles/global.css";
 <link rel="preconnect" href="https://rsms.me/" />
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" />
+<link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
 
 <!-- Scripts -->
 <script defer src="https://unpkg.com/alpinejs@3.13.3/dist/cdn.min.js"></script>
