--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -217,7 +217,7 @@ const { pathname } = Astro.url;
 				ease: "power2.out",
 			},
 		})
-			.from(".logo-svg path", { drawSVG: 0 })
+			.from(".logo-svg path", { drawSVG: 0, fill: "transparent" })
 .to(".logo-svg path", { 
     fill: (index, target) => {
         return target.classList.contains("st1") ? "#ec145a" : "#000";
