Change stroke color to transparent in Navigation.astro

--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -222,7 +222,7 @@ const { pathname } = Astro.url;
     fill: (index, target) => {
         return target.classList.contains("st1") ? "#ec145a" : "#000";
     },
-    stroke: "#fff", 
+    stroke: "transparent", 
     duration: 2 
 }, "<+=0.5");
 
