--- a/src/pages/it/work/[...slug].astro
+++ b/src/pages/it/work/[...slug].astro
@@ -20,7 +20,7 @@ const { Content } = await entry.render();
 const seo: AstroSeoProps = {
 	title: `Project ${entry.data.title} - Majestico`,
 	description: entry.data.description,
-	canonical: `https://mintaka.co/it/work/${entry.slug}/`,
+	canonical: `https://mintaka.co/en/work/${entry.slug}/`,
 	openGraph: {
 		url: entry.slug,
 		title: entry.data.title,
