--- a/src/pages/it/tags/[tag].astro
+++ b/src/pages/it/tags/[tag].astro
@@ -7,7 +7,7 @@ import BaseLayout from "@layouts/BaseLayout.astro";
 export async function getStaticPaths() {
 	const allPosts = (await getCollection("posts")).filter((post) => {
 		const [postLang, ...slug] = post.slug.split("/");
-		return postLang === "it";
+		return postLang === "kr";
 	});
 
 	const uniqueTags = [...new Set(allPosts.flatMap((post) => post.data.tags))];
@@ -33,7 +33,7 @@ const { posts } = Astro.props;
 const seo: AstroSeoProps = {
 	title: `${tag} | Majestico Studio`,
 	description: `Explore articles and insights on '${tag}' at Majestico Studio. Dive into a wealth of knowledge covering the latest trends and tips in web design and SEO.`,
-	canonical: `https://mintaka.co/it/tags/${tag}/`,
+	canonical: `https://mintaka.co/en/tags/${tag}/`,
 };
 ---
 
