--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,45 +4,47 @@
 
 /* latin-ext */
 @font-face {
-  font-family: 'JetBrains Mono';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/jetbrainsmono/v24/tDbv2o-flEEny0FZhsfKu5WU4zr3E_BX0PnT8RD8yKwBNntkaToggR7BYRbKPx7cwgknk-6nFg.woff2) format('woff2');
-  unicode-range: U+0021-007E;
+	font-family: 'JetBrains Mono';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/jetbrainsmono/v24/tDbv2o-flEEny0FZhsfKu5WU4zr3E_BX0PnT8RD8yKwBNntkaToggR7BYRbKPx7cwgknk-6nFg.woff2) format('woff2');
+	unicode-range: U+0021-007E;
 }
+
 /* latin */
 @font-face {
-  font-family: 'JetBrains Mono';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/jetbrainsmono/v24/tDbv2o-flEEny0FZhsfKu5WU4zr3E_BX0PnT8RD8yKwBNntkaToggR7BYRbKPxDcwgknk-4.woff2) format('woff2');
-  unicode-range: U+0021-007E;
+	font-family: 'JetBrains Mono';
+	font-style: normal;
+	font-weight: 400;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/jetbrainsmono/v24/tDbv2o-flEEny0FZhsfKu5WU4zr3E_BX0PnT8RD8yKwBNntkaToggR7BYRbKPxDcwgknk-4.woff2) format('woff2');
+	unicode-range: U+0021-007E;
 }
 
 /* latin-ext */
 @font-face {
-  font-family: 'JetBrains Mono';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/jetbrainsmono/v24/tDbv2o-flEEny0FZhsfKu5WU4zr3E_BX0PnT8RD8yKwBNntkaToggR7BYRbKPx7cwgknk-6nFg.woff2) format('woff2');
-  unicode-range: U+0021-007E;
+	font-family: 'JetBrains Mono';
+	font-style: normal;
+	font-weight: 700;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/jetbrainsmono/v24/tDbv2o-flEEny0FZhsfKu5WU4zr3E_BX0PnT8RD8yKwBNntkaToggR7BYRbKPx7cwgknk-6nFg.woff2) format('woff2');
+	unicode-range: U+0021-007E;
 }
+
 /* latin */
 @font-face {
-  font-family: 'JetBrains Mono';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/jetbrainsmono/v24/tDbv2o-flEEny0FZhsfKu5WU4zr3E_BX0PnT8RD8yKwBNntkaToggR7BYRbKPxDcwgknk-4.woff2) format('woff2');
-  unicode-range: U+0021-007E;
+	font-family: 'JetBrains Mono';
+	font-style: normal;
+	font-weight: 700;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/jetbrainsmono/v24/tDbv2o-flEEny0FZhsfKu5WU4zr3E_BX0PnT8RD8yKwBNntkaToggR7BYRbKPxDcwgknk-4.woff2) format('woff2');
+	unicode-range: U+0021-007E;
 }
 
 @font-face {
-	font-family: "Midnight";
-	src: url("/fonts/Midnight.woff2") format("woff");
+	font-family: "A-MORESans";
+	src: url("/fonts/A-MORESans.woff2") format("woff");
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
@@ -93,20 +95,25 @@ html {
 	border: none;
 	background-color: transparent;
 }
+
 ::-webkit-scrollbar {
 	width: 4px;
 	background-color: transparent;
 }
+
 ::-webkit-scrollbar-thumb {
 	background-color: #1b1816;
 	border-radius: 2px;
 }
+
 ::-webkit-scrollbar-thumb:hover {
 	background-color: #000;
 }
+
 .dark ::-webkit-scrollbar-thumb {
 	background-color: #e8e1e1;
 }
+
 .dark ::-webkit-scrollbar-thumb:hover {
 	background-color: #ffffff;
 }
@@ -117,14 +124,17 @@ html {
 	color: white;
 	background: #ed145b;
 }
+
 ::selection {
 	color: white;
 	background: #ed145b;
 }
+
 .dark ::-moz-selection {
 	color: #ed145b;
 	background: white;
 }
+
 .dark ::selection {
 	color: #ed145b;
 	background: white;
