Replace repository content with current state

--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -32,20 +32,14 @@ const translatePath = useTranslatedPath(lang);
 			<div class="col-span-3 mt-10 lg:col-start-4">
 				<div class="relative flex flex-col overflow-hidden"></div>
 				<div class="relative mt-1 flex h-8 flex-col overflow-hidden">
-					<a href="mailto:test@mintaka.co" class="block cursor-pointer overflow-hidden">test@mintaka.co</a>
+					<a href="mailto:mail@mail.com" class="block cursor-pointer overflow-hidden">mail@mail.com</a>
 				</div>
 			</div>
 		</div>
-		<div class="col-span-6 row-start-1 text-5xl leading-tight lg:col-span-4 lg:row-start-auto lg:text-6xl">
-			<!-- Newsletter Section -->
-			<div>{t("footer.newsletter")}</div>
-			<div>{t("footer.newsletter2")}</div>
-			<Newsletter />
-		</div>
+		<div class="col-span-6 row-start-1 text-5xl leading-tight lg:col-span-4 lg:row-start-auto lg:text-6xl"></div>
 	</div>
 	<div class="relative mt-4 flex w-full items-end justify-between gap-y-4 text-sm lg:text-xl lg:font-normal">
-		<div>©2023 YOUR COMPANY</div>
-		<!-- https://codepen.io/fliseno1k/pen/WNboLBy -->
+		<div>©2025 STUDIO A-MORE</div>
 		<button
 			id="go-top-button"
 			aria-label="Go to Top"
