--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -22,13 +22,13 @@ const shareImage = new URL("/images/meta/mintaka_share.gif", Astro.site).toStrin
 const defaultSeo: AstroSeoProps = {
 	title: "STUDIO A-MORE",
 	description:
-		"Mintaka Studio excels in creating fast, user-friendly websites with a focus on aesthetic design and SEO optimization, ensuring a standout online presence",
+		"STUDIO A-MORE excels in creating fast, user-friendly websites with a focus on aesthetic design and SEO optimization, ensuring a standout online presence",
 	canonical: "https://mintaka.co",
 	openGraph: {
 		url: "https://mintaka.co",
 		title: "STUDIO A-MORE",
 		description:
-			"Mintaka Studio excels in creating fast, user-friendly websites with a focus on aesthetic design and SEO optimization, ensuring a standout online presence",
+			"STUDIO A-MORE excels in creating fast, user-friendly websites with a focus on aesthetic design and SEO optimization, ensuring a standout online presence",
 		images: [
 			{
 				url: shareImage,
