--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -27,7 +27,7 @@ const translatePath = useTranslatedPath(lang);
 				</h1>
 			</div>
 			<div class="flex flex-col items-center gap-5 text-center lg:gap-10">
-				<p class="max-w-full font-sans lg:text-lg" set:html={t("hero.subtitle")} />
+				<p class="max-w-full break-keep font-sans lg:text-lg" set:html={t("hero.subtitle")} />
 				<div class="flex flex-col items-center justify-center gap-3 lg:col-start-1">
 					<div class="squircle-bg rounded-lg bg-zinc-900" data-cursor-hover data-cursor-parallax>
 						<a
@@ -117,9 +117,9 @@ const translatePath = useTranslatedPath(lang);
 		background-image: linear-gradient(
 			110deg,
 			rgb(236, 20, 90) 10%,
-			rgb(236, 20, 90) 40%,
-			rgb(230, 70, 120) 50%,
-			rgb(236, 20, 90) 60%,
+			rgb(236, 20, 90) 35%,
+			rgb(255, 105, 140) 50%,
+			rgb(236, 20, 90) 65%,
 			rgb(236, 20, 90) 100%
 		);
 		background-size: 300% 300%;
