--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -114,8 +114,8 @@ const translatePath = useTranslatedPath(lang);
 	}
 
 	.heart {
-		background-image: linear-gradient(
-			110deg,
+		background-image: radial-gradient(
+			circle at 10% 10%,
 			rgb(236, 20, 90) 10%,
 			rgb(236, 20, 90) 35%,
 			rgb(255, 105, 140) 50%,
@@ -139,7 +139,7 @@ const translatePath = useTranslatedPath(lang);
 		}
 		.suffix {
 			margin-left: -0.2em;
-			transform: translate(-0.35em, 0);
+			transform: translate(-1.6em, 0);
 		}
 		.heart {
 			background-image: radial-gradient(circle at 10% 10%, rgb(255, 170, 190) 0%, rgb(236, 20, 90) 60%, rgb(180, 10, 50) 100%) !important;
@@ -201,7 +201,7 @@ const translatePath = useTranslatedPath(lang);
 								index === 0
 									? isMobile
 										? suffix
-											? -0.01 * parseFloat(getComputedStyle(suffix).fontSize)
+											? -1.6 * parseFloat(getComputedStyle(suffix).fontSize)
 											: 0
 										: suffix
 											? -1.5 * parseFloat(getComputedStyle(suffix).fontSize)
