Replace repository content with current state

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -23,9 +23,9 @@ const defaultSeo: AstroSeoProps = {
 	title: "STUDIO A-MORE",
 	description:
 		"STUDIO A-MORE excels in creating fast, user-friendly websites with a focus on aesthetic design and SEO optimization, ensuring a standout online presence",
-	canonical: "https://mintaka.co",
+	canonical: "https://studio-a-more-main.pages.dev",
 	openGraph: {
-		url: "https://mintaka.co",
+		url: "https://studio-a-more-main.pages.dev",
 		title: "STUDIO A-MORE",
 		description:
 			"STUDIO A-MORE excels in creating fast, user-friendly websites with a focus on aesthetic design and SEO optimization, ensuring a standout online presence",
